--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "NodeJs backend for collab",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "Node start index.js"
   },
   "author": "Oladhimeji",
   "license": "ISC",
