--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "NodeJs backend for collab",
   "main": "index.js",
   "scripts": {
-    "start": "Node index.js"
+    "start": "node index.js"
   },
   "author": "Oladhimeji",
   "license": "ISC",
