--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Oladhimeji",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/credential-providers":"^3.201.0",
+    "mongodb-client-encryption": "^2.3.0",
+    "snappy": "^7.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
